// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defineDaoFindByRefMethodCodeForDomainObject should look correct for a domain event with a static referenced array 1`] = `
"import { UnexpectedCodePathError } from 'helpful-errors';
import { VisualogicContext } from 'visualogic';
import { Ref, isRefByPrimary, isRefByUnique } from 'domain-objects';
import { HasMetadata } from 'type-fns';

import { TrainLocatedEvent } from '$PATH_TO_DOMAIN_OBJECT';
import { DatabaseConnection } from '$PATH_TO_DATABASE_CONNECTION';
import { findByUnique } from './findByUnique';
import { findByUuid } from './findByUuid';

export const findByRef = async (
  input: { ref: Ref<typeof TrainLocatedEvent> },
  context: { dbConnection: DatabaseConnection } & VisualogicContext,
): Promise<HasMetadata<TrainLocatedEvent> | null> => {
  if (isRefByPrimary({ of: TrainLocatedEvent })(input.ref))
    return await findByUuid(input.ref, context);
  if (isRefByUnique({ of: TrainLocatedEvent })(input.ref))
    return await findByUnique(input.ref, context);
  throw new UnexpectedCodePathError('invalid ref for TrainLocatedEvent', { input });
};"
`;

exports[`defineDaoFindByRefMethodCodeForDomainObject should look correct for domain entity with references, array and solo, implicit and direct 1`] = `
"import { UnexpectedCodePathError } from 'helpful-errors';
import { VisualogicContext } from 'visualogic';
import { Ref, isRefByPrimary, isRefByUnique } from 'domain-objects';
import { HasMetadata } from 'type-fns';

import { Train } from '$PATH_TO_DOMAIN_OBJECT';
import { DatabaseConnection } from '$PATH_TO_DATABASE_CONNECTION';
import { findByUnique } from './findByUnique';
import { findByUuid } from './findByUuid';

export const findByRef = async (
  input: { ref: Ref<typeof Train> },
  context: { dbConnection: DatabaseConnection } & VisualogicContext,
): Promise<HasMetadata<Train> | null> => {
  if (isRefByPrimary({ of: Train })(input.ref))
    return await findByUuid(input.ref, context);
  if (isRefByUnique({ of: Train })(input.ref))
    return await findByUnique(input.ref, context);
  throw new UnexpectedCodePathError('invalid ref for Train', { input });
};"
`;

exports[`defineDaoFindByRefMethodCodeForDomainObject should look correct for simple domain entity 1`] = `
"import { UnexpectedCodePathError } from 'helpful-errors';
import { VisualogicContext } from 'visualogic';
import { Ref, isRefByPrimary, isRefByUnique } from 'domain-objects';
import { HasMetadata } from 'type-fns';

import { Carriage } from '$PATH_TO_DOMAIN_OBJECT';
import { DatabaseConnection } from '$PATH_TO_DATABASE_CONNECTION';
import { findByUnique } from './findByUnique';
import { findByUuid } from './findByUuid';

export const findByRef = async (
  input: { ref: Ref<typeof Carriage> },
  context: { dbConnection: DatabaseConnection } & VisualogicContext,
): Promise<HasMetadata<Carriage> | null> => {
  if (isRefByPrimary({ of: Carriage })(input.ref))
    return await findByUuid(input.ref, context);
  if (isRefByUnique({ of: Carriage })(input.ref))
    return await findByUnique(input.ref, context);
  throw new UnexpectedCodePathError('invalid ref for Carriage', { input });
};"
`;

exports[`defineDaoFindByRefMethodCodeForDomainObject should look correct for simple literal 1`] = `
"import { UnexpectedCodePathError } from 'helpful-errors';
import { VisualogicContext } from 'visualogic';
import { Ref, isRefByPrimary, isRefByUnique } from 'domain-objects';
import { HasMetadata } from 'type-fns';

import { Geocode } from '$PATH_TO_DOMAIN_OBJECT';
import { DatabaseConnection } from '$PATH_TO_DATABASE_CONNECTION';
import { findByUnique } from './findByUnique';
import { findByUuid } from './findByUuid';

export const findByRef = async (
  input: { ref: Ref<typeof Geocode> },
  context: { dbConnection: DatabaseConnection } & VisualogicContext,
): Promise<HasMetadata<Geocode> | null> => {
  if (isRefByPrimary({ of: Geocode })(input.ref))
    return await findByUuid(input.ref, context);
  if (isRefByUnique({ of: Geocode })(input.ref))
    return await findByUnique(input.ref, context);
  throw new UnexpectedCodePathError('invalid ref for Geocode', { input });
};"
`;
